<resources>
    <string name="app_name">Speed Warning</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="your_speed_gps">GPS SPEED</string>
    <string name="your_speed_network">NETWORK SPEED</string>
    <string name="typeHere">Type here your top speed</string>
    <string name="setSpeed">User-set speed will appear here</string>
    <string name="BtnStart">Start</string>
    <string name="BtnStop">Stop</string>
    <string name="CkBoxGPS">Use GPS</string>
    <string name="CkBoxNetwork">Use Network</string>
    <string name="Units">Miles?</string>
</resources>
