<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/LblSpeed"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/your_speed_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/LblSetSpeed"
        android:text="@string/setSpeed"
        android:layout_below="@+id/LblSpeed"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/Image"
        android:layout_below="@+id/LblSetSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/Status"
        android:text="@string/status"
        android:layout_above="@+id/CheckBoxUnits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/abc_action_bar_progress_bar_size"
        />

    <CheckBox
        android:id="@+id/CheckBoxUnits"
        android:layout_above="@+id/InputSpeed"
        android:text="@string/Units"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="false"/>

    <EditText
        android:id="@+id/InputSpeed"
        android:hint="@string/typeHere"
        android:inputType="number"
        android:layout_above="@+id/BtnStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BtnStart"
        android:text="@string/BtnStart"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
